[仕様変更] 複数css、複数JS読み込み対応

--- a/src/html/diagnosis.html
+++ b/src/html/diagnosis.html
@@ -1,8 +1,7 @@
 {% extends 'layout.html' %}
 {% set page = {
-    "cssname": "diagnosis",
-    "css": "true",
-    "title": ""
+    "css": ["diagnosis"],
+    "title": "予想される納税額 | "
 } %}
 {% block content %}
 
