--- a/src/html/mypage.html
+++ b/src/html/mypage.html
@@ -1,7 +1,6 @@
 {% extends 'layout.html' %}
 {% set page = {
-    "cssname": "",
-    "css": "false",
+    "css": [],
     "title": ""
 } %}
 {% set lists = [
