--- a/src/html/mypage_diagnosis.html
+++ b/src/html/mypage_diagnosis.html
@@ -1,7 +1,6 @@
 {% extends 'layout.html' %}
 {% set page = {
-    "cssname": "index",
-    "css": "true",
+    "css": ["index"],
     "title": "マイページ診断 | "
 } %}
 {% set breadcrumb_list = [
