--- a/src/html/mypage_status-modal.html
+++ b/src/html/mypage_status-modal.html
@@ -1,7 +1,6 @@
 {% extends 'modal.html' %}
 {% set page = {
-    "cssname": "modal",
-    "css": "true",
+    "css": ["mypage"],
     "title": "ステータス確認"
 } %}
 {% block content %}
