--- a/src/html/mypage_troubles.html
+++ b/src/html/mypage_troubles.html
@@ -1,7 +1,6 @@
 {% extends 'layout.html' %}
 {% set page = {
-    "cssname": "mypage",
-    "css": "true",
+    "css": ["mypage"],
     "title": "マイページ 重要度チェック | "
 } %}
 {% set breadcrumb_list = [
