--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,8 +1,8 @@
 {% extends 'layout.html' %}
 {% set page = {
-    "cssname": "index",
-    "css": "true",
-    "title": ""
+    "css": ["index"],
+    "title": "",
+    "top": "true"
 } %}
 {% block content %}
 
