--- a/src/html/mypage_legacyinfo.html
+++ b/src/html/mypage_legacyinfo.html
@@ -1,7 +1,6 @@
 {% extends 'layout.html' %}
 {% set page = {
-    "cssname": "mypage",
-    "css": "true",
+    "css": ["mypage"],
     "title": "相続予定財産情報 | "
 } %}
 {% set breadcrumb_list = [
