--- a/src/html/mypage_trouble-check.html
+++ b/src/html/mypage_trouble-check.html
@@ -1,7 +1,6 @@
 {% extends 'layout.html' %}
 {% set page = {
-    "cssname": "mypage",
-    "css": "true",
+    "css": ["mypage"],
     "title": "お悩みチェック | "
 } %}
 {% set breadcrumb_list = [
