[TOP] indexのJS読み込み修正

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 {% set page = {
     "css": ["index"],
+    "js": ["index"],
     "title": "",
     "top": "true"
 } %}
