--- a/src/html/mypage/trouble-detail.html
+++ b/src/html/mypage/trouble-detail.html
@@ -44,6 +44,8 @@
       <div class="form-control form-control-button">
         <button class="button" onclick="javascript:;">この相談について<br>無料オンライン相談の予約を入れる</button>
       </div>
+    </div>
+    <div class="form-field form-field-single">
       <div class="form-control form-control-button">
         <button class="button button-type2" onclick="javascript:;">相談せずに問題を解決済みにする</button>
       </div>
