--- a/src/html/mypage/troubles.html
+++ b/src/html/mypage/troubles.html
@@ -38,9 +38,9 @@
   <div class="box-inner">
     {% include '_breadcrumb.html' %}
 
-    <div class="form-field form-field-single">
+    <div class="form-field form-field-single mypage-header-button">
       <div class="form-control form-control-button">
-        <button class="button" onclick="javascript:;">マイページ診断はこちら</button>
+        <a class="button" href="/mypage/diagnosis.html">マイページ診断はこちら</a>
       </div>
     </div>
 
