--- a/src/html/mypage/status.html
+++ b/src/html/mypage/status.html
@@ -8,6 +8,9 @@
     "url": "/",
     "text": "ホーム"
   }, {
+    "url": "/mypage/",
+    "text": "マイページ"
+  }, {
     "url": "",
     "text": "ステータス確認"
   }
