--- a/src/html/mypage/status.html
+++ b/src/html/mypage/status.html
@@ -22,17 +22,17 @@
   {% include '_breadcrumb.html' %}
 
     <div class="mypage-status">
-       <ul>
-         <li>重要度チェック</li>
-         <li>お知らせ</li>
-         <li class="current">ステータス確認</li>
-         <li>相続予定財産情報</li>
-       </ul>
+      <ul>
+        <li>重要度チェック</li>
+        <li>お知らせ</li>
+        <li class="current">ステータス確認</li>
+        <li>相続予定財産情報</li>
+      </ul>
     </div>
 
     <div class="my-st-member">
       <div class="my-st-member-image">
-        <img src="/images/mypage/icon-default.png" alt="">
+        <img src="/images/mypage/status-icon01.png" alt="">
       </div>
       <div class="my-st-member-info">
         <p><span>はなまる　太郎</span><span>ハナマル　タロウ</span></p>
@@ -48,8 +48,89 @@
       </div>
     </div>
 
+  </div>
+  <div class="box-inner box-inner-no-padding">
+    <h3>被相続人</h3>
     <div class="my-st-family-tree">
+      <div class="my-st-family-group my-st-family-group1">
+        <div class="my-st-family-group1-1">
+          <ul>
+            <li><p>万次郎</p></li>
+          </ul>
+          <p class="my-st-family-rel">祖父母1人</p>
+        </div>
+        <span class="my-st-family-group1-space"></span>
+        <div class="my-st-family-group1-2">
+          <ul>
+            <li><p>洋次郎</p></li>
+            <li><p>房江</p></li>
+          </ul>
+          <p class="my-st-family-rel">祖父母2人</p>
+        </div>
+      </div>
+      <div class="my-st-family-group my-st-family-group2">
+        <div class="my-st-family-group2-1 is_selected">
+          <ul>
+            <li><p>裕次郎裕次</p></li>
+          </ul>
+          <p class="my-st-family-rel">父</p>
+        </div>
+        <span class="my-st-family-group2-space"></span>
+        <div class="my-st-family-group2-2">
+          <ul>
+            <li><p>珠子</p></li>
+          </ul>
+          <p class="my-st-family-rel">母</p>
+        </div>
+      </div>
 
+      <div class="my-st-family-group my-st-family-group3">
+        <span class="my-st-family-group3-space1"></span>
+        <div class="my-st-family-group3-1">
+          <ul>
+            <li><p>太郎</p></li>
+          </ul>
+          <p class="my-st-family-rel">亡くなった人</p>
+        </div>
+        <span class="my-st-family-group3-space2"></span>
+        <div class="my-st-family-group3-2">
+          <ul>
+            <li><p>花子</p></li>
+          </ul>
+          <p class="my-st-family-rel">配偶者</p>
+        </div>
+      </div>
+
+      <div class="my-st-family-group my-st-family-group4">
+        <div class="my-st-family-group4-1">
+          <ul>
+            <li><p>裕次郎</p></li>
+            <li><p>遊太郎</p></li>
+            <li><p>優子</p></li>
+          </ul>
+          <p class="my-st-family-rel">兄弟3人</p>
+        </div>
+        <span class="my-st-family-group4-space"></span>
+        <div class="my-st-family-group4-2">
+          <ul>
+            <li><p>次郎</p></li>
+            <li><p>三郎</p></li>
+          </ul>
+          <p class="my-st-family-rel">子2人</p>
+        </div>
+      </div>
+
+      <div class="my-st-family-group my-st-family-group5">
+        <span class="my-st-family-group5-space"></span>
+        <div class="my-st-family-group5-1">
+          <ul>
+            <li><p>涼子</p></li>
+            <li><p>順子</p></li>
+            <li><p>玉三郎</p></li>
+          </ul>
+          <p class="my-st-family-rel">孫3人</p>
+        </div>
+      </div>
     </div>
 
     <div class="form-field form-field-single">
