[マイページ] ステータス確認調整

--- a/src/html/mypage/status.html
+++ b/src/html/mypage/status.html
@@ -121,6 +121,7 @@
       </div>
 
       <div class="my-st-family-group my-st-family-group5">
+        <span class="my-st-family-group5-space"></span>
         <div class="my-st-family-group5-1">
           <ul>
             <li><p>涼子</p></li>
