トップクイック診断JS調整

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,7 +35,7 @@
             <div class="form-field-label">子供<span>（5名まで）</span></div>
             <div class="form-field-content">
               <div class="form-control form-control-radio">
-              <label><input type="radio" name="children" id="children-yes"><span></span>あり<input type="number" name="children-num" id="children-num" min="1" max="5" class="js-clickable" disabled=""><span class="form-control-unit">人</span>
+              <label><input type="radio" name="children" id="children-yes"><span></span>あり<input type="number" name="children-num" id="children-num" min="1" max="5" class="js-clickable"><span class="form-control-unit">人</span>
 </label>
               </div>
               <div class="form-control form-control-radio">
