[TOP] ランキングの見出し修正

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -299,19 +299,19 @@
       <ul>
         <li>
           <a href="#">
-            <h5><img src="/images/top/sec08-title01-01.png" alt="1位 相続について"></h5>
+            <h5 class="top-sec08-rank01">相続<span>について</span></h5>
             <img src="/images/top/sec08-01-01.png" alt="">
           </a>
         </li>
         <li>
           <a href="#">
-            <h5><img src="/images/top/sec08-title01-02.png" alt="2位 生前手続きについて"></h5>
+            <h5 class="top-sec08-rank02">生前手続き<span>について</span></h5>
             <img src="/images/top/sec08-01-02.png" alt="">
           </a>
         </li>
         <li>
           <a href="#">
-            <h5><img src="/images/top/sec08-title01-03.png" alt="3位 介護について"></h5>
+            <h5 class="top-sec08-rank03">3位 介護<span>について</span></h5>
             <img src="/images/top/sec08-01-03.png" alt="">
           </a>
         </li>
@@ -322,19 +322,19 @@
       <ul>
         <li>
           <a href="#">
-            <h5><img src="/images/top/sec08-title02-01.png" alt="1位 生前手続きについて"></h5>
+            <h5 class="top-sec08-rank01">生前手続き<span>について</span></h5>
             <img src="/images/top/sec08-02-01.png" alt="">
           </a>
         </li>
         <li>
           <a href="#">
-            <h5><img src="/images/top/sec08-title02-02.png" alt="2位 介護について"></h5>
+            <h5 class="top-sec08-rank02">介護<span>について</span></h5>
             <img src="/images/top/sec08-02-02.png" alt="">
           </a>
         </li>
         <li>
           <a href="#">
-            <h5><img src="/images/top/sec08-title02-03.png" alt="3位 遺産について"></h5>
+            <h5 class="top-sec08-rank03">遺産<span>について</span></h5>
             <img src="/images/top/sec08-02-03.png" alt="">
           </a>
         </li>
