--- a/src/html/index.html
+++ b/src/html/index.html
@@ -311,7 +311,7 @@
         </li>
         <li>
           <a href="#">
-            <h5 class="top-sec08-rank03">3位 介護<span>について</span></h5>
+            <h5 class="top-sec08-rank03">介護<span>について</span></h5>
             <img src="/images/top/sec08-01-03.png" alt="">
           </a>
         </li>
