[マイページ] オンライン予約ページ追加

--- a/src/html/mypage/index.html
+++ b/src/html/mypage/index.html
@@ -11,7 +11,10 @@
   ["/mypage/status", "ステータス確認"],
   ["/mypage/notifications", "お知らせ"],
   ["/mypage/legacyinfo", "相続予定財産情報"],
-  ["/mypage/diagnosis", "マイページ診断"]
+  ["/mypage/diagnosis", "マイページ診断"],
+  ["/mypage/reservation-form", "無料オンライン相談予約"],
+  ["/mypage/reservation-confirm", "無料オンライン相談予約（確認）"],
+  ["/mypage/reservation-complete", "無料オンライン相談予約（完了）"]
 ] %}
 {% block content %}
 
