[修正] typo、CSSの不具合調整等

--- a/src/html/mypage/legacyinfo.html
+++ b/src/html/mypage/legacyinfo.html
@@ -97,8 +97,8 @@
     </div>
 
     <div class="form-field-footer">
-        <div class="form-control form-control-button">
-          <button class="button button-type2">戻る</button>
+        <div class="form-control form-control-button form-control-button-type2">
+          <button class="button">戻る</button>
         </div>
     </div>
   </div>
