--- a/src/html/mypage/reservation-complete.html
+++ b/src/html/mypage/reservation-complete.html
@@ -34,8 +34,8 @@
       <h3><span class="color-pink">■</span>無料オンライン相談予約</h3>
       <p class="complete-image"><img src="/images/mypage/reservation-ill01.png" alt=""></p>
       <div class="form-field-footer">
-        <div class="form-control form-control-button">
-          <input type="button" class="button button-type4" value="マイページへ">
+        <div class="form-control form-control-button form-control-button-type4">
+          <input type="button" class="button" value="マイページへ">
         </div>
       </div>
     </div>
