--- a/src/html/mypage/status.html
+++ b/src/html/mypage/status.html
@@ -42,8 +42,8 @@
         <div class="form-control form-control-button">
           <button class="button">編集する</button>
         </div>
-        <div class="form-control form-control-button">
-          <button class="button button-type3">退会する</button>
+        <div class="form-control form-control-button form-control-button-type3">
+          <button class="button">退会する</button>
         </div>
       </div>
     </div>
