--- a/src/html/mypage/troubles.html
+++ b/src/html/mypage/troubles.html
@@ -53,7 +53,7 @@
        </ul>
     </div>
 
-    <p>あなたに起こりうる問題点です。それぞれの解決方法をご確認ください。</p>
+    <p class="u_mb20">あなたに起こりうる問題点です。それぞれの解決方法をご確認ください。</p>
   </div>
 
   <div class="box-inner box-inner-no-padding">
