--- a/src/html/mypage/trouble-detail.html
+++ b/src/html/mypage/trouble-detail.html
@@ -46,8 +46,8 @@
       </div>
     </div>
     <div class="form-field form-field-single">
-      <div class="form-control form-control-button">
-        <button class="button button-type2" onclick="javascript:;">相談せずに問題を解決済みにする</button>
+      <div class="form-control form-control-button form-control-button-type2">
+        <button class="button" onclick="javascript:;">相談せずに問題を解決済みにする</button>
       </div>
     </div>
   </div>
