mypage local-navi処理追加

--- a/src/html/mypage/legacyinfo.html
+++ b/src/html/mypage/legacyinfo.html
@@ -24,9 +24,9 @@
 
     <div class="mypage-status">
        <ul>
-         <li>重要度チェック</li>
-         <li>お知らせ</li>
-         <li>ステータス確認</li>
+        <li><a href="/mypage/troubles.html">重要度チェック</a></li>
+        <li><a href="/mypage/notifications.html">お知らせ</a></li>
+        <li><a href="/mypage/status.html">ステータス確認</a></li>
          <li class="current">相続予定財産情報</li>
        </ul>
     </div>
