--- a/src/html/mypage/notifications.html
+++ b/src/html/mypage/notifications.html
@@ -49,10 +49,10 @@
 
     <div class="mypage-status">
        <ul>
-         <li>重要度チェック</li>
+        <li><a href="/mypage/troubles.html">重要度チェック</a></li>
          <li class="current">お知らせ</li>
-         <li>ステータス確認</li>
-         <li>相続予定財産情報</li>
+         <li><a href="/mypage/status.html">ステータス確認</a></li>
+         <li><a href="/mypage/legacyinfo.html">相続予定財産情報</a></li>
        </ul>
     </div>
 
