--- a/src/html/mypage/status.html
+++ b/src/html/mypage/status.html
@@ -23,10 +23,10 @@
 
     <div class="mypage-status">
       <ul>
-        <li>重要度チェック</li>
-        <li>お知らせ</li>
+        <li><a href="/mypage/troubles.html">重要度チェック</a></li>
+        <li><a href="/mypage/notifications.html">お知らせ</a></li>
         <li class="current">ステータス確認</li>
-        <li>相続予定財産情報</li>
+        <li><a href="/mypage/legacyinfo.html">相続予定財産情報</a></li>
       </ul>
     </div>
 
