--- a/src/html/mypage/reservation-confirm.html
+++ b/src/html/mypage/reservation-confirm.html
@@ -24,9 +24,9 @@
     <div class="mypage-status">
        <ul>
          <li class="current">重要度チェック</li>
-         <li>お知らせ</li>
-         <li>ステータス確認</li>
-         <li>相続予定財産情報</li>
+         <li><a href="/mypage/notifications.html">お知らせ</a></li>
+         <li><a href="/mypage/status.html">ステータス確認</a></li>
+         <li><a href="/mypage/legacyinfo.html">相続予定財産情報</a></li>
        </ul>
     </div>
 
