--- a/src/html/shukatsu_fudousan.html
+++ b/src/html/shukatsu_fudousan.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %} {% set page = { "css": ["sougi"], "js": ["sougi"],
+{% extends 'layout.html' %} {% set page = { "css": ["shukatsu_fudousan"], "js": ["shukatsu_fudousan"],
 "title": "終活×不動産について | " } %} {% set breadcrumb_list = [ { "url": "/", "text":
 "ホーム" }, { "url": "", "text": "終活×不動産について" } ] %} {% block content %}
 
