--- a/src/html/shukatsu_fudousan.html
+++ b/src/html/shukatsu_fudousan.html
@@ -1529,19 +1529,19 @@
                 す。<br><br>
                 空き家の活用方法にはさまざまなものがあるので、具体的にどのような方法にとり組んだ
                 らいいか分からないという方も多いでしょう。<br><br>
-                主な空き家活用の策として、<br>
+                主な空き家活用の策として、<br><br>
 
                 <div class="container" style="background-color:#f3f3f3">
-                    1 居住用物件として賃貸する
-                    2 事務所・店舗用物件として賃貸する
-                    3 借主負担型DIY賃貸物件にする
-                    4 移住用住宅
-                    5 シェアハウスにして賃貸する
-                    6 民泊経営をする
-                    7 トランクルームにする
-                    8 福祉向け住宅にする
-                    9 地域のコミュニティスペースとして活用する
-                    10 建売業者に住宅用地として売却する
+                    1 居住用物件として賃貸する<br>
+                    2 事務所・店舗用物件として賃貸する<br>
+                    3 借主負担型DIY賃貸物件にする<br>
+                    4 移住用住宅<br>
+                    5 シェアハウスにして賃貸する<br>
+                    6 民泊経営をする<br>
+                    7 トランクルームにする<br>
+                    8 福祉向け住宅にする<br>
+                    9 地域のコミュニティスペースとして活用する<br>
+                    10 建売業者に住宅用地として売却する<br>
                 </div><br><br>
 
 
