--- a/src/html/haka.html
+++ b/src/html/haka.html
@@ -285,7 +285,7 @@
             </div>
         </div>
         <div class="top-image02">
-            <img src="http://via.placeholder.com/1000x290" alt="" />
+            <img src="images/top/haka-top.jpg" style="" alt="" />
         </div>
         <div class="content">
             <div class="content-title-box">
@@ -323,10 +323,10 @@
 
 
             <div class="content01-circle-pc">
-                <img src="http://via.placeholder.com/800x400" alt="" width="100%" />
+                <img src="images/top/haka-content.jpg" style="" alt="" />
             </div>
             <div class="content01-circle-sp">
-                <img src="http://via.placeholder.com/500x600" alt="" width="100%" />
+                <img src="images/top/haka-content.jpg" style="" alt="" />
             </div>
 
             <!-- <div class="content01-circle" align="left">
@@ -394,14 +394,16 @@
                 </div>
             </div>
             <div class="content02-image">
-                <img src="http://via.placeholder.com/800x400" alt="" width="100%" />
+                <img src="images/top/haka-content.jpg" style="" alt="" />
             </div>
 
             <div class="content01-text02">
                 <div class="container" style="background-color:#f3f3f3">
 
+                    <p class="category-mini-tittle">
 
-                    《今に伝わるお墓の歴史》<br><br>
+                        《今に伝わるお墓の歴史》<br><br>
+                    </p>
                     ・お墓の始まりは縄文時代<br><br>
                     今なお全国各地で古来のお墓が発見されていることからもわかるように、日本では、縄文時代から
                     死者を埋葬する習慣があったようです。なかでも、青森県の「三内丸山遺跡」は有名で、大規模な
@@ -437,7 +439,12 @@
                     現在では、お墓の形一つをとっても、その家ごとに異なります。時代と共にお墓の形態は変化して
                     いきますが、お墓参りに行くことで故人を偲び先祖に感謝をする気持ちは、いつまでも変わらずに
                     持ち続けていきたいものです。<br><br>
-                    《お墓を購入するのに良い時期はある？》<br><br>
+
+                    <p class="category-mini-tittle">
+
+                        《お墓を購入するのに良い時期はある？》<br><br>
+                    </p>
+
                     ・思い立ったら吉日<br><br>
                     仏教では、過去、現在、未来で物事を考えます。そしてこれらを合わせて三世（さんぜ）と言いま
                     す。一番、大切なのは現生で、前世でも来世でもありません。生きている人を基本にした仏教本来
@@ -462,7 +469,12 @@
                     生きているうちにお墓を建てると早死する、または悪いことが起きると言う人もいるようですが、
                     それは迷信です。「寿陵」の寿が示すように「家に幸せをもたらし、長寿が約束される」といわれ
                     、寿陵は大変おめでたいお墓なのです<br><br>
-                    《多様化するお墓の種類》<br><br>
+
+                    <p class="category-mini-tittle">
+
+                        《多様化するお墓の種類》<br><br>
+                    </p>
+
                     ・一般墓<br><br>
                     墓石を建てる従来型のお墓です。管理運営の形態により、公営霊園、民間霊園、寺院墓地の3つの
                     タイプに分類されます。<br><br>
@@ -491,7 +503,11 @@
                     ご遺骨をパウダー状に海にまく供養方法。散骨後、お参りをする場所があいまいになるため、家族
                     や親族の理解を得てから行うことが必要となります。<br><br>
 
-                    《一般墓地の3つのタイプとは？》<br><br>
+                    <p class="category-mini-tittle">
+
+                        《一般墓地の3つのタイプとは？》<br><br>
+                    </p>
+
                     ・寺院墓地<br><br>
                     お寺の境内、または近隣にあり、その寺院が管理している墓地のことをいいます。寺院のお墓を得
                     るということは、そのお寺の檀家になることが前提となっている場合がほとんどなので、必ず住職
@@ -518,7 +534,11 @@
                     し、園内もきれいに整備されており、いつでも気持ちよくお参りに行くことができます。また、公
                     営霊園のような申し込むための条件や抽選もなく、いつでも誰でもお申し込みをすることができま
                     す。<br><br>
-                    《人気の高い都立霊園とは》<br><br>
+
+                    <p class="category-mini-tittle">
+                        《人気の高い都立霊園とは》<br><br>
+                    </p>
+
                     都立霊園は、東京都が管理・運営する、宗教を問わない公営の霊園です。青山、雑司ヶ谷、谷中、
                     染井、多磨、小平、八王子、八柱と８ヶ所あり、毎年一部霊園を除き募集が行われています。<br><br>
                     申し込みの受付は、年一度6月下旬から７月初旬頃にかけてありますが、申込みには居住年数やご
@@ -527,7 +547,12 @@
                     都立霊園は一般埋蔵施設のほか、合葬埋蔵施設、樹木型合葬埋蔵施設など、跡取りのことで心配の
                     ない区分もあります。<br><br>
                     なお、八柱霊園に限り、霊園が所在する松戸市にお住いの方も申し込みをすることができます。
-                    《一般墓地を選ぶ時のポイント》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《一般墓地を選ぶ時のポイント》<br><br>
+                    </p>
+
                     ・立地<br><br>
                     お参りに行きやすい所が一番。一般的にお連れ合いの方が亡くなるころには、皆さんもそれなりに
                     ご高齢のはずです。お墓参りに行くには遠方では大変ですので、自宅から1時間以内で行ける霊園
@@ -555,7 +580,11 @@
                     分な管理がされなくなる場合もあります。ですから、墓地を求めるときは、その霊園の将来を見極
                     めて購入しましょう。また、お寺の場合は、法要などをその寺院に頼むようになるため、住職の人
                     となりが信頼できるかどうか充分に確認しましょう。<br><br>
-                    《お墓を建てるときに掛かる費用とは》<br><br>
+
+                    <p class="category-mini-tittle">
+                        《お墓を建てるときに掛かる費用とは》<br><br>
+                    </p>
+
                     ・永代使用料（墓地使用料）<br><br>
                     お墓を建てるときに「墓地を買う」と言われる方が多いですが、正確には「墓地の永代使用権を買
                     う」ことで、土地そのものを買うわけではありません。永代使用料は申込時に一度のみ支払い、使
@@ -575,7 +604,11 @@
                     管理料は滞納すると、使用権が取り消されることもありますので、忘れずに支払うようにしましょ
                     う。<br><br>
 
-                    《ゆとり墓所や芝生墓所など墓所のタイプも様々》<br><br>
+
+                    <p class="category-mini-tittle">
+                        《ゆとり墓所や芝生墓所など墓所のタイプも様々》<br><br>
+                    </p>
+
                     ・一般墓所<br><br>
                     隣の墓所との境界をはっきりとさせるために外柵と土台を作り、その上に石碑を建てる伝統的なお
                     墓のスタイル。面積の大きい墓所に多く見られる。<br><br>
@@ -587,7 +620,11 @@
                     欧風のお墓をイメージした墓所。土台を作らずに、芝生が敷かれた地面に直接石碑を建てるタイプ
                     の墓所です。<br><br>
 
-                    《指定石材店制度とは？》<br><br>
+
+                    <p class="category-mini-tittle">
+                        《指定石材店制度とは？》<br><br>
+                    </p>
+
                     民間墓地や寺院墓地で採用されているシステムで、墓石工事は墓地管理者が指定した石材店だけが
                     行えます。「石材店を自由に選べない」と思われますが、この制度は霊園・墓地の永続性や墓石の
                     保証という観点から、「素性のはっきりとした信頼のある石材店に限定する」という考えに基づい
@@ -597,7 +634,11 @@
                     あらかじめその石材店とコンタクトを取り、霊園見学を直接申し込むようにしましょう。<br><br>
                     寺院墓地の場合は、ご住職の許可が得られれば墓石工事ができるケースも稀にあります。公営霊園
                     では指定石材店制度はありませんので、どこの石材店でも墓石工事を行うことができます。<br><br>
-                    《墓相って何？》<br><br>
+
+                    <p class="category-mini-tittle">
+                        《墓相って何？》<br><br>
+                    </p>
+
                     私たちのまわりには、手相、家相、人相など「相」と付くもので命運を占う方法がありますが、そ
                     れと同様にお墓の向きや建て方、形、色などで、家族の運勢を見ようというのが「墓相」です。<br><br>
                     墓相学は紀元前の中国で発祥した風水地理学を源流としており、先祖をどの地に埋葬するか、墓の
@@ -607,7 +648,11 @@
                     しかし、仏教には「墓相」という記述はなく、「お墓の建て方はこうあるべきだ」といったような
                     教えはありません。「墓相」をどのように捉えていくのかは、手相、家相、人相などと同じように
                     、実際にお墓を建てるその人自身の考え方次第ということになるでしょう。<br><br>
-                    《ペットと一緒に入れるお墓》<br><br>
+
+                    <p class="category-mini-tittle">
+                        《ペットと一緒に入れるお墓》<br><br>
+                    </p>
+
                     ペットが亡くなった時、過去に自宅の庭に埋葬をしたという話を耳にしましたが、最近は住宅事情
                     も変わり、特に都市部では自宅の庭に埋葬することは現実的ではありません。ペットの遺骨をどこ
                     に埋葬すればよいのかわからず、そのまま自宅に安置する方や、ペット専用の合祀墓に埋葬するな
@@ -616,7 +661,11 @@
                     そのような悩みを解決するために、最近ではペットと一緒にお墓に入れる霊園が増えてきています
                     。霊園内の全区画でペットと一緒に入れる霊園と、区画が限定されている霊園がありますので、詳
                     しくは石材店に相談してみましょう。<br><br>
-                    《世界のお墓事情》<br><br>
+
+                    <p class="category-mini-tittle">
+                        《世界のお墓事情》<br><br>
+                    </p>
+
                     ・アメリカのお墓<br><br>
                     かつては教会に併設された教会墓地に埋葬するのが一般的でしたが、現在では広大な敷地を持つメ
                     モリアルパークなどに埋葬されるケースが多くなっています。家族単位よりも個人単位でお墓を建
@@ -658,12 +707,20 @@
 
                 <div class="container" style="background-color:#f3f3f3">
 
-                    《墓石の形を決めよう》<br><br>
+
+                    <p class="category-mini-tittle">
+                        《墓石の形を決めよう》<br><br>
+                    </p>
+
                     墓石の形は主に「和形墓石」、「洋型墓石」、「デザイン墓石」の3つのタイプがあります。墓石
                     の形や大きさは、霊園で定めてられている規則に反していなければ自由に決めることが可能ですが
                     、各霊園や石材店で用意されている規格の形を選ぶ方が多いようです。霊園によっては、洋型専用
                     区画など、制限を設けている場合もありますので、希望の墓石が建てられるか注意しましょう。<br><br>
-                    《墓石の形 3タイプ》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《墓石の形 3タイプ》<br><br>
+                    </p>
                     ・和型墓石<br><br>
                     石を３段に重ねた伝統的な縦長の墓石。彫刻には○○家の墓と家名を掘るのが一般的です。寺院墓地
                     では根強い人気があります。<br><br>
@@ -676,13 +733,21 @@
                     。球状やピラミッド型の他、ギターや車など、趣味にちなんだ形をした墓石も。オリジナル墓石を
                     建てる場合は、各霊園の工事規則に反していないか調べ、石材店と細かな打ち合わせを重ねて進め
                     ていく必要があるため、規格の墓石よりも時間を要します。<br><br>
-                    《石の種類を決めよう》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《石の種類を決めよう》<br><br>
+                    </p>
                     現在墓石に使われている石の種類は300種以上あるといわれています。産地や色も様々ですが、最
                     近は中国やインドなど、海外で採れる石が多く使われています。<br><br>
                     カラフルできれいな石が数多くありますが、その石の耐久性や安定性は、一般の方にはなかなかわ
                     かりません。石を選ぶときは見栄えの良さだけで即決せず、長年の経験をもつ石材店に相談し、石
                     の特徴を確認するようにしましょう。<br><br>
-                    《日本・世界各国の銘石》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《日本・世界各国の銘石》<br><br>
+                    </p>
                     ・香川県産　庵治（あじ）石<br><br>
                     別名「墓石のダイヤモンド」。「斑（ふ）」と呼ばれるまだら模様が最大の特徴で、良質の原石は
                     数が少なく、まさに最高級の墓石です。非常に硬質で、加工には高度な技術と時間が必要とされま
@@ -708,7 +773,11 @@
                     国内で最も使用されている石。薄い茶色味を帯びた粗目の石面で、主に外柵などの土台部分に使用
                     されています。中国産の石としては古くから使用実績があり、経年変化も少なく安定感が抜群に優
                     れている石の一つです。<br><br>
-                    《公営霊園の墓石工事はどこに頼むのが一番？》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《公営霊園の墓石工事はどこに頼むのが一番？》<br><br>
+                    </p>
                     都立霊園をはじめとする公営の霊園では、民営霊園のような指定石材店制度が無いため、自分達で
                     石材店を探して墓石工事をお願いしなければなりません。数多くある石材店の中から、お墓を建て
                     た後のアフターフォローのことも考えて、信頼できる石材店を選ぶ必要があります。<br><br>
@@ -720,7 +789,11 @@
                     →実際に建っている墓石を見ることができ安心して墓石工事をお願いできる<br><br>
                     ３、図面や見積書がしっかりとしているか？<br><br>
                     →お墓は専門的で分からないからこそ、図面や石の産地加工代が漏れなく記載された見積書が必要<br><br>
-                    《彫刻も様々》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《彫刻も様々》<br><br>
+                    </p>
                     ありがとう、やすらぎ、絆、愛、笑顔、感謝、空、家族、希望、一期一会、翔、和、こころ、海、
                     これらは全て墓石に彫刻されている言葉です。最近のお墓は、家名や家紋だけではなく、好きな言
                     葉や花のイラストを彫刻し、ご家族の想いを彫刻で残す方が増えてきました。<br><br>
@@ -728,7 +801,11 @@
                     しています。<br><br>
                     ただし、寺院墓地など一部の墓地では、彫刻の内容に制限がある場合がありますので、トラブルを
                     回避するためにも、彫刻前に必ず確認が必要です。<br><br>
-                    《お墓を建てたときに執り行う法要とは》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《お墓を建てたときに執り行う法要とは》<br><br>
+                    </p>
                     ・開眼法要（かいげんほうよう）<br><br>
                     お墓を建てたときに執り行う法要が開眼法要です。お墓は建てただけではただの「もの」に過ぎな
                     いとされていますが、開眼法要を執り行うことによって、仏様の魂が墓石に入り、ただの「もの」
@@ -757,7 +834,11 @@
                     えて仏壇に安置するようになるため、仏壇の無い家はそれまでに用意する必要があります。<br><br>
                     また、仏壇も開眼法要がありますので、新たに仏壇を用意した場合は、四十九日や百か日などの法
                     要時に、一緒に開眼法要もお願いしましょう。<br><br>
-                    《埋葬時の必要書類は？》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《埋葬時の必要書類は？》<br><br>
+                    </p>
                     ・埋葬許可証<br><br>
                     埋葬する際に墓地管理者に提出する書類です。火葬の際、火葬場に提出した火葬許可証に、火葬が
                     終了した証明印が押されて返却されますが、それが埋葬許可証となります。埋葬許可証の返却は、
@@ -787,7 +868,9 @@
                 <div class="container" style="background-color:#f3f3f3">
 
 
-                    《お墓参りはいつ行く？》<br><br>
+                    <p class="category-mini-tittle">
+                        《お墓参りはいつ行く？》<br><br>
+                    </p>
                     お墓を建てた後は、定期的にお参りに行きましょう。お彼岸やお盆の時期だけではなく、故人の誕
                     生日や命日、家族のライフイベントの報告など、思い出したときは気軽に行かれるとよいでしょう
                     。<br><br>
@@ -798,7 +881,11 @@
                     ることもありますので注意しましょう。<br><br>
                     霊園に売店が無い場合は、生花や線香を買っていきます。墓石をふく雑巾も忘れないようにしまし
                     ょう。<br><br>
-                    《お参りの作法》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《お参りの作法》<br><br>
+                    </p>
                     お墓についたら、まず、お墓の掃除をしましょう。掃除が終わったら、花立に水を入れお花を飾り
                     ます。次に用意した供物をお供えします。線香に火をつけてお参りをしますが、線香は束のまま火
                     をつけて、人数分に分けてお供えするのが一般的です。<br><br>
@@ -810,7 +897,11 @@
                     お参りが終わったら、お供えは鳥や猫などに荒らされないように持ち帰るようにします。また、古
                     くなったお塔婆は、本数が多くなると風に煽られ倒壊することがありますので、抜いて墓地の焼却
                     炉でお炊きあげをしてもらいましょう。<br><br>
-                    《合掌の仕方》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《合掌の仕方》<br><br>
+                    </p>
                     合掌はインド生まれの祈りの形で、二通りのやり方があります。一般的なのは、右手(仏様)と左手(
                     自分)の指と指をぴったりと合わせる方法で、仏と自分が合体し祈る心になるとしています。<br><br>
                     もう一つは、両手の指をそれぞれの間へ交互に組み合わせて合掌する方法で、十二合掌(密教)と言
@@ -818,7 +909,11 @@
                     また、お参りをするときは、数珠を手に合掌するのが作法です。数珠は仏教徒のシンボルだと言わ
                     れていますが、それ以上に、ご先祖様への功徳を何倍にもする力があるとされています。それゆえ
                     、数珠をもってお参りすることは、ご先祖様に対してより良い供養となることでしょう。<br><br>
-                    《お墓のお掃除は定期的に》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《お墓のお掃除は定期的に》<br><br>
+                    </p>
                     久しぶりにお墓参りに行くと、草が生え放題で墓石もホコリやシミが目立ち、よごれがひどいこと
                     があります。墓所から離れて暮らしていると、あまりお参りに行くことができず、お墓の汚れにつ
                     いて悩んでいる方も多いようです。<br><br>
@@ -829,7 +924,11 @@
                     なかなかお墓参りに行くことのできない方のために、有料で定期的に墓所内の清掃を行っている霊
                     園もあります。ご希望される方は、そのようなサービスがあるかどうか、霊園の管理事務所や墓石
                     を購入した石材店にご相談してみてください。<br><br>
-                    《自分でできるお墓のお手入れ》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《自分でできるお墓のお手入れ》<br><br>
+                    </p>
                     ・墓石を洗うこと<br><br>
                     まずははじめに枯れた花、線香の燃えカスなどを取り除きます。墓石は、水を含んだスポンジかや
                     わらかい布で洗います。それでも汚れが取れない場合、たわしを使ってもかまいません。ただし、
@@ -846,7 +945,11 @@
                     す。この場合、園芸用のシャベルで玉砂利を掘り起こして、目の粗いザルに入れ、洗ってから敷き
                     なおします。玉砂利の汚れがひどく水で洗っても落ちない場合は、石材店に頼んで交換すると見栄
                     えが良くなります。<br><br>
-                    《お盆》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《お盆》<br><br>
+                    </p>
                     ・お盆とは？<br><br>
                     「盂蘭盆会（うらぼんえ）」のことで略してお盆と言います。お盆の行事は『盂蘭盆経』に説かれ
                     ている目連尊者の話に由来します。目連はお釈迦様の弟子の中でも神通力が一番と言われていまし
@@ -878,7 +981,11 @@
                     地域により異なりますが、故人の霊が道に迷わず家に戻れるように、目印として提灯を灯します。
                     新盆には新盆提灯として白張りの提灯、そして親せきや縁者からのお供えには柄のついた提灯を用
                     いることが多いです。<br><br>
-                    《お彼岸》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《お彼岸》<br><br>
+                    </p>
                     ・お彼岸とは？<br><br>
                     お彼岸は「彼岸会（ひがんえ）」とも言い、春は3月20日頃の春分の日を挟んで前後3日ずつ、秋は
                     9月23日頃の秋分の日を挟んで前後3日間ずつのそれぞれ１週間のことをいいます。<br><br>
@@ -909,7 +1016,11 @@
                     菩提寺で営まれる「彼岸会」にも参加しましょう。正式な法要に参加することは、供養の心を育て
                     るだけではなく、伝統的な仏教文化に触れる絶好の機会でもあります。時間が無い場合でも、本堂
                     のご本尊へのお参りとご住職へのあいさつは欠かさないようにしましょう。<br><br>
-                    《卒塔婆》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《卒塔婆》<br><br>
+                    </p>
                     ・卒塔婆とは？<br><br>
                     お盆やお彼岸、納骨や年忌法要の時に、お墓の後ろに建てる１ｍから２ｍくらいの期の板のことで
                     す。<br><br>
@@ -966,7 +1077,9 @@
                 <div class="container" style="background-color:#f3f3f3">
 
 
-                    《仏教と宗派について》<br><br>
+                    <p class="category-mini-tittle">
+                        《仏教と宗派について》<br><br>
+                    </p>
                     ６世紀初め、唐や百済で隆盛を極めていた仏教が、最新の文化として日本に伝えられました。後、
                     聖徳太子が仏教の教えを政治の中心理念とし、日本に仏教の教えを浸透させ、平安時代の最澄・空
                     海の出現により、本格的に日本人の心をとらえました。鎌倉時代には、法然、親鸞、道元、栄西、
@@ -1024,7 +1137,11 @@
                     本山：身延山久遠寺<br><br>
                     １６歳で出家し、比叡山をはじめ各地で修業し、布教をはじめました。辻説法などを行いますが、
                     鎌倉幕府の怒りを買い、何度も流罪となりました。<br><br>
-                    《神道》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《神道》<br><br>
+                    </p>
                     神道は自然や自然現象に八百万の神を見出す、日本固有の一神教でない民族宗教といわれています
                     。神道は、一般的には明確な経典や教義が無く、その根幹にあるのは、神羅万象や祖霊、死者など
                     への畏敬の念であるといわれています。<br><br>
@@ -1033,7 +1150,11 @@
                     神社は、神道の神々を祭神としていますが、全国の神社の多くは神社本庁が統括しています。一般
                     的には現在、初詣や厄除、初宮参りや七五三、結婚式や地鎮祭など、神道の行事は日常生活のいた
                     るところに見かけることができます。<br><br>
-                    《キリスト教》<br><br>
+
+
+                    <p class="category-mini-tittle">
+                        《キリスト教》<br><br>
+                    </p>
                     キリスト教は、旧約聖書（３９巻）と新約聖書（２７巻）の２部の書物を合わせて「聖書」として
                     います。旧約聖書は紀元前１５００年頃から紀元前４００年頃の間にヘブル語で、新約聖書は紀元
                     ４０年頃から紀元９０年頃の一般的にはギリシャ語で書かれています。<br><br>
@@ -1066,7 +1187,10 @@
 
                     <br>どんなに頑丈に作られたお墓でも、時間の経過とともに墓石に傷がつき、風雨の浸食で風化が生じてしまいます。地震や地盤沈下も影響し、墓石の破損の原因は数えればきりがありません。破損の状況がひどい時は石材店に相談し、お墓のリフォームを行うことをお勧めします。
                     <br>
-                    <br>《主な墓石のリフォーム内容》
+                    <br>
+                    <p class="category-mini-tittle">
+                        《主な墓石のリフォーム内容》
+                    </p>
                     <br>・石碑の傾きを直す
                     <br>・汚れてしまった玉砂利の交換
                     <br>・外柵、カロートの作り替え
@@ -1090,13 +1214,19 @@
                     <br>既に埋葬されているご遺骨を別の墓地に移すことを、専門的には「改葬（かいそう）」と言います。改葬はわかりやすく「お墓の引っ越し」とも言われ、最近ではご遺骨を引き上げたお墓を解体することから、「墓じまい」と言われるようになりました。
                     <br>改葬を行うには、改葬元となる現墓地が所在する市町村役場に申請し、「改葬許可証」の交付を受ける必要があります。
                     <br>
-                    <br>《改葬する主な理由》
+                    <br>
+                    <p class="category-mini-tittle">
+                        《改葬する主な理由》
+                    </p>
                     <br>・お墓が遠くお参りに不便
                     <br>・故郷のお墓を見るものがいなくなった
                     <br>・複数のお墓を一つにしたい
                     <br>・お墓の維持が大変
                     <br>
-                    <br>《改葬の一般的な手続き》
+                    <br>
+                    <p class="category-mini-tittle">
+                        《改葬の一般的な手続き》
+                    </p>
                     <br>１、現在ご遺骨が埋葬されている墓地が所在する市町村役場に行き「改葬許可申請書」を入手する
                     <br>２、ご遺骨の移転先となる墓地の管理者から「受入証明書」を発行してもらう
                     <br>現在ご遺骨が埋葬されている墓地の管理者から「埋葬証明書」を発行してもらう
@@ -1106,7 +1236,10 @@
                     <br>
                     <br>※「改葬許可証」の申請方法は、各市町村により異なる場合があります。必ず事前に申請する市町村役場に確認をしてください。
                     <br>
-                    <br>《改葬時に起こりえる問題点》
+                    <br>
+                    <p class="category-mini-tittle">
+                        《改葬時に起こりえる問題点》
+                    </p>
                     <br>・親戚などから反対されてしまった
                     <br>・埋葬されているご遺骨の数が多い
                     <br>・現墓地が遠方のため改葬許可証の申請ができない
